# i18n-country-translations-rs

./: Cargo.toml  README.md
data/: af.json  ak.json  am.json  ar.json  as.json  asa.json  az.json  bas.json  be.json  bez.json  bg.json  bm.json  bn.json  bo.json  br.json  brx.json  bs.json  byn.json  ca.json  cgg.json  chr.json  cs.json  cy.json  da.json  de.json  dje.json  dyo.json  dz.json  ee.json  el.json  en.json  eo.json  es.json  et.json  eu.json  ewo.json  fa.json  ff.json  fi.json  fil.json  (+116 more)
scripts/: sync-data.sh
src/: lib.rs  registry.rs
tests/: integration_test.rs
