[package]
name = "i18n-country-translations"
version = "0.2.0"
edition = "2021"
description = "Localized country name translations for 257 territory codes across 168 locales (CLDR-sourced)"
license = "MIT"
repository = "https://github.com/onomojo/i18n-country-translations-rs"
keywords = ["i18n", "country", "translation", "localization", "cldr"]
categories = ["internationalization", "localization"]

[dependencies]
serde_json = "1"
once_cell = "1"
i18n-country-translations-data = "0.1"
